[Success] Fix hero button causing issues on mobile

--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -5,8 +5,8 @@
   flex-wrap: wrap;
   width: 100%;
   overflow: hidden;
-  z-index: 0;
-  background-image: url("../assets/hero.webp");
+  transition: 0.2s ease all;
+  background-color: black;
 }
 .backVideo {
   position: absolute;
@@ -18,6 +18,7 @@
   height: 585px;
   object-fit: cover;
   overflow: hidden;
+  transition: 0.2s ease all;
 }
 .innerContainer {
   display: flex;
@@ -117,5 +118,17 @@
     text-align: center;
     margin: 0;
     padding: 0;
+  }
+}
+@media screen and (max-width: 1080px) {
+  .hero,
+  .backVideo {
+    height: 425px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .hero,
+  .backVideo {
+    height: 355px;
   }
 }
